--- a/phase 2 - practice project- 1/src/main/webapp/WEB-INF/web.xml
+++ b/phase 2 - practice project- 1/src/main/webapp/WEB-INF/web.xml
@@ -1,67 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-
-  <display-name>UserLoginValidation</display-name>
-
+  <display-name>phase 2 - practice project-1</display-name>
   <welcome-file-list>
-
     <welcome-file>index.html</welcome-file>
-
     <welcome-file>index.jsp</welcome-file>
-
     <welcome-file>index.htm</welcome-file>
-
     <welcome-file>default.html</welcome-file>
-
     <welcome-file>default.jsp</welcome-file>
-
     <welcome-file>default.htm</welcome-file>
-
   </welcome-file-list>
-
+  
   <servlet>
-
-    <servlet-name>LoginServlet</servlet-name>
-
-    <servlet-class>LoginServlet</servlet-class>
-
+  	<servlet-name>Login</servlet-name>
+  	<servlet-class>UserLogin.Login</servlet-class>
   </servlet>
-
-  <servlet>
-
-    <servlet-name>LogoutServlet</servlet-name>
-
-    <servlet-class>LogoutServlet</servlet-class>
-
-  </servlet>
-
- 
-
+  
   <servlet-mapping>
-
-    <servlet-name>LogoutServlet</servlet-name>
-
-    <url-pattern>/logout</url-pattern>
-
+  	<servlet-name>Login</servlet-name>
+  	<url-pattern>/loginServelt</url-pattern>
   </servlet-mapping>
-
-  <servlet-mapping>
-
-    <servlet-name>LoginServlet</servlet-name>
-
-    <url-pattern>/login</url-pattern>
-
-  </servlet-mapping>
-
-  <welcome-file-list>
-
-  <welcome-file>login.html</welcome-file>
-
-  <welcome-file>welcome.html</welcome-file>
-
-  </welcome-file-list>
-
- 
-
 </web-app>
