--- a/phase 2 assisted practice project-9/src/main/webapp/WEB-INF/web.xml
+++ b/phase 2 assisted practice project-9/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>LoginLogout</display-name>
+  <display-name>HTTPSessionDemo</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,20 +9,22 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
   <servlet>
-    <servlet-name>GetHandler</servlet-name>
-    <servlet-class>GetHandler</servlet-class>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>LoginServlet</servlet-class>
   </servlet>
   <servlet>
-    <servlet-name>PostHandler</servlet-name>
-    <servlet-class>PostHandler</servlet-class>
+    <servlet-name>Dashboard</servlet-name>
+    <servlet-class>Dashboard</servlet-class>
   </servlet>
+ 
   <servlet-mapping>
-    <servlet-name>GetHandler</servlet-name>
-    <url-pattern>/gethandler</url-pattern>
+    <servlet-name>Dashboard</servlet-name>
+    <url-pattern>/dashboard</url-pattern>
   </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>PostHandler</servlet-name>
-    <url-pattern>/posthandler</url-pattern>
+   <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
 </web-app>
